tests/errors/lifetime/loan/mut_loan_blocks_direct_move.err.expected
error: at 8:13: [LT-LoanConflict] In function 'f', block 'entry': cannot move from 'x': already borrowed by 'r'
   |
 8 |             call use_num(move x);
   |             ^^^^^^^^^^^^^^^^^^^^
  = note: borrow of 'x' occurs here
   |
 7 |             r = &mut x;
   |             ^^^^^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
